--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~8.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "boostrap": "^2.0.0",
+    "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "g": "^2.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
